objects/partdir_mp__PartnerReview__c.object
<CustomObject>
    <fields>
        <fullName>partdir_mp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Reviews</relationshipLabel>
        <relationshipName>Partner_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Content__c</fullName>
        <label>Content</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>partdir_mp__Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Partner Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Partner Review</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Reviews</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>partdir_mp__ProperlyRating</fullName>
        <active>true</active>
        <errorConditionFormula>partdir_mp__Rating__c &lt; 1 || partdir_mp__Rating__c &gt; 5</errorConditionFormula>
        <errorDisplayField>partdir_mp__Rating__c</errorDisplayField>
        <errorMessage>The value of rating should be between 1 and 5 inclusive.</errorMessage>
    </validationRules>
</CustomObject>